--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A react redux web app for getting the current weather information for a region",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack",
+    "dev": "webpack && webpack-dev-server --hot"
   },
   "repository": {
     "type": "git",
@@ -20,20 +21,33 @@
   "author": "Param Singh",
   "license": "MIT",
   "dependencies": {
+    "css-loader": "^0.23.1",
+    "keymirror": "^0.1.1",
     "material-ui": "^0.15.0",
+    "node-sass": "^3.7.0",
     "object-assign": "^4.1.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
+    "sass-loader": "^3.2.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0"
+    "babel-preset-stage-2": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
