--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^1.14.1",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
