--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
   "author": "Param Singh",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.12.0",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "css-loader": "^0.23.1",
     "keymirror": "^0.1.1",
     "material-ui": "^0.15.0",
@@ -34,18 +41,10 @@
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0"
   }
 }
